testdata/baselines/reference/submodule/conformance/overloadTag2.errors.txt
overloadTag2.js(25,20): error TS7006: Parameter 'b' implicitly has an 'any' type.
overloadTag2.js(30,9): error TS2554: Expected 2 arguments, but got 0.
overloadTag2.js(31,9): error TS2554: Expected 2 arguments, but got 1.
overloadTag2.js(32,9): error TS2554: Expected 2 arguments, but got 1.


==== overloadTag2.js (4 errors) ====
    export class Foo {
        #a = true ? 1 : "1"
        #b
    
        /**
         * Should not have an implicit any error, because constructor's return type is always implicit
         * @constructor
         * @overload
         * @param {string} a
         * @param {number} b
         */
        /**
         * @constructor
         * @overload
         * @param {number} a
         */
        /**
         * @constructor
         * @overload
         * @param {string} a
         *//**
         * @constructor
         * @param {number | string} a
         */
        constructor(a, b) {
                       ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
            this.#a = a
            this.#b = b
        }
    }
    var a = new Foo()
            ~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 0.
!!! related TS6210 overloadTag2.js:25:17: An argument for 'a' was not provided.
    var b = new Foo('str')
            ~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 overloadTag2.js:25:20: An argument for 'b' was not provided.
    var c = new Foo(2)
            ~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 overloadTag2.js:25:20: An argument for 'b' was not provided.
    var d = new Foo('str', 2)
    